<resources>
    <string name="app_name">BloodPressure</string>
    <string name="blood_pressure_app">Blood\nPressure\nApp</string>
    <string name="your_professional_health_data_manager">Your Professional Health\nData Manager</string>
    <string name="your_name">Your Name :</string>
    <string name="dr_name">Dr. Name : </string>
    <string name="age">Age :</string>
    <string name="weight">Weight :</string>
    <string name="height">Height :</string>
    <string name="gender">Gender :</string>
    <string name="save">SAVE</string>
    <string name="preference_file_key">com.example.bloodpressure.userpreferences</string>
    <string name="user_name">userName</string>
    <string name="user_dr_name">userDrName</string>
    <string name="user_age">userAge</string>
    <string name="user_height">userHeight</string>
    <string name="user_weight">userWeight</string>
    <string name="user_gender">userGender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blood_pressure_type">Blood Pressure Type:</string>
    <string name="imageUri">imageUri</string>
    <string name="whatisbp">Blood pressure is the pressure of blood pushing against the walls of your arteries. Arteries carry blood from your heart to other parts of your body.</string>

</resources>